tests/expectations/compiler/mappings/shadowed_mapping_fail.out
DCE_ENABLED:
Error [EAST0372009]: variable `one` shadowed by
    --> compiler-test:5:5
     |
   5 |     mapping one: field => field;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [EAST0372009]: variable `one` shadowed by
    --> compiler-test:7:5
     |
   7 |     transition one() -> u8 {
   8 |         return 1u8 + 1u8;
   9 |     }
     |     ^

DCE_DISABLED:
Error [EAST0372009]: variable `one` shadowed by
    --> compiler-test:5:5
     |
   5 |     mapping one: field => field;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [EAST0372009]: variable `one` shadowed by
    --> compiler-test:7:5
     |
   7 |     transition one() -> u8 {
   8 |         return 1u8 + 1u8;
   9 |     }
     |     ^
